--- a/project-root/agrimods-backend/package.json
+++ b/project-root/agrimods-backend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "compression": "^1.7.4",
     "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
@@ -34,3 +35,4 @@
     "nodemon": "^3.0.1"
   }
 }
+
