--- a/project-root/agrimods-backend/package.json
+++ b/project-root/agrimods-backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "compression": "^1.7.4",
+    "paypal-rest-sdk": "^1.8.1", 
     "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
@@ -35,4 +36,5 @@
     "nodemon": "^3.0.1"
   }
 }
+
 
