--- a/project-root/agrimods-backend/package.json
+++ b/project-root/agrimods-backend/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "compression": "^1.7.4",
     "paypal-rest-sdk": "^1.8.1", 
+    "winston": "^3.11.0",
     "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
@@ -36,5 +37,6 @@
     "nodemon": "^3.0.1"
   }
 }
+
 
 
