--- a/project-root/agrimods-backend/package.json
+++ b/project-root/agrimods-backend/package.json
@@ -12,6 +12,7 @@
     "compression": "^1.7.4",
     "paypal-rest-sdk": "^1.8.1", 
     "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^5.0.0", 
     "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
@@ -37,6 +38,7 @@
     "nodemon": "^3.0.1"
   }
 }
+
 
 
 
