--- a/project-root/agrimods-backend/package.json
+++ b/project-root/agrimods-backend/package.json
@@ -14,7 +14,7 @@
     "paypal-rest-sdk": "^1.8.1", 
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^5.0.0", 
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "express-validator": "^7.0.1",
@@ -39,6 +39,7 @@
     "nodemon": "^3.0.1"
   }
 }
+
 
 
 
